--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,7 +5,34 @@
     --very-light-pink: #C7C7C7;
     --text-input-field: #F7F7F7;
     --hospital-green: #ACD9B2;
+    --rm: 1.4rem;
+    --md: 1.6rem;
+    --lg: 1.8rem;
+}
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html{
+    font-size:62.5%;
 }
 body{
     font-family: 'Quicksand', sans-serif;
+}
+.cards-container{
+    display: grid;
+    grid-template-columns:repeat(auto-fill,24rem);
+}
+.product-card{
+    width: 24rem;
+}
+.product-card img{
+    width: 24rem;
+    height: 24rem;
+    border-radius: 20px;
+    object-fit: cover;
+}
+.product-info{
+    
 }
