--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,7 +5,7 @@
     --very-light-pink: #C7C7C7;
     --text-input-field: #F7F7F7;
     --hospital-green: #ACD9B2;
-    --rm: 1.4rem;
+    --sm: 1.4rem;
     --md: 1.6rem;
     --lg: 1.8rem;
 }
@@ -20,9 +20,11 @@ html{
 body{
     font-family: 'Quicksand', sans-serif;
 }
-.cards-container{
+.main-container{
     display: grid;
+    place-content: center;
     grid-template-columns:repeat(auto-fill,24rem);
+    gap: 2.6rem;
 }
 .product-card{
     width: 24rem;
@@ -34,5 +36,41 @@ body{
     object-fit: cover;
 }
 .product-info{
-    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.product-info{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 1.2rem;
+}
+.product-info div p:nth-child(1){
+    font-weight: bold;
+    font-size: var(--md);
+    margin-bottom: 0.4rem;
+}
+.product-info div p:nth-child(2){
+    font-size: var(--sm);
+    color: var(--very-light-pink);
+}
+.product-info figure img{
+    width:4rem ;
+    height:4rem;
+}
+@media(max-width:640px){
+    .main-container{
+        grid-template-columns:repeat(auto-fill,14rem);
+        gap: 2.6rem;
+    }
+    .product-card{
+        width: 14rem;
+    }
+    .product-card img{
+        width: 14rem;
+        height: 14rem;
+        border-radius: 20px;
+        object-fit: cover;
+    }
 }
